@@ -1,6 +1,6 @@
 AUX xfishtank-2.1tp-Makefile.patch 703 RMD160 7e4f813ee30222d4db7a3c0eda2b980d9d7b6789 SHA1 da50be927a452b9c63c863bde5a4bc39408896ce SHA256 b9d1a3a8112684d75d4374763a2bc254357fafc4376f900b570c8e4283cda4d7
 AUX xfishtank-2.1tp-winnt.patch 3107 RMD160 34e3c7e523d84e594a702ac72f2cc87885e5b1b3 SHA1 e3334676a798c186127fc3dda57c2159b3bed200 SHA256 4b8ab2df0af3abb5a1743cf1baba5addb198ff0eaeb3de4edaf420718836f63f
 DIST xfishtank-2.1tp.tar.gz 187513 RMD160 0c7a55b80ce6a71138a1033f55761c2e92b2e6a7 SHA1 f5a3cfde6f1c6cfb92fb08b6c7b6a72528153643 SHA256 afaedcecd61716fce6c008598dc5750f8d061ae23a36afbab426d0d2cc922240
-EBUILD xfishtank-2.1.ebuild 1090 RMD160 6b88f7b2a23c50731de26d3b3cfa77be8cefea62 SHA1 ee9bab192b58f6dcbf67df1b58a5d1b2e611a52f SHA256 12e1c8079b6b52b88bbb1003e4ce5a4c78e585e37315b176a04bd8e8c67db836
-MISC ChangeLog 1589 RMD160 26cf3e5b980facab7bea512d12870efbb1ba90a8 SHA1 74ea5ca94851906e985155184dbf15f741e525cd SHA256 8b77354c7451e86b87285d02f644eb1be6cfb5298da7c538adb8615a440d2c21
+EBUILD xfishtank-2.1.ebuild 1171 RMD160 829aa0f91cbba135f5f8c81ef4da9e7c1d09346c SHA1 d60f674bdba49015622b3479da45508724594d3a SHA256 ef3c6409c9749feed31765615951aca42c71aeed062f2fbeb191fdd0e8a9176d
+MISC ChangeLog 1708 RMD160 2322739ebf499736d3a4a28a872b9315868cbf84 SHA1 59ba5e5fd63365662c2778d57a3921bc69b13b03 SHA256 3d87f7819685aca10f0d70d7e5fe7f67b221e268d12c5abb0216fac1f7017a6b
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
