@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfishtank/xfishtank-2.1.ebuild,v 1.12 2006/10/21 22:24:31 omp Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfishtank/xfishtank-2.1.ebuild,v 1.13 2009/05/04 09:16:05 nelchael Exp $
 
 inherit eutils toolchain-funcs
 
@@ -28,6 +28,8 @@ src_unpack() {
 	unpack ${A}
 	epatch "${FILESDIR}/${MY_P}-Makefile.patch"
 	[[ ${CHOST} == *-winnt* ]] && epatch "${FILESDIR}/${MY_P}-winnt.patch"
+	cd "${S}"
+	sed -i -e 's,INSTPGMFLAGS = -s,INSTPGMFLAGS =,' Makefile || die
 }
 
 src_compile() {
