@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xfishtank
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfishtank/ChangeLog,v 1.13 2007/02/22 00:03:53 jokey Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfishtank/ChangeLog,v 1.14 2009/05/04 09:16:05 nelchael Exp $
+
+  04 May 2009; Krzysiek Pawlik <nelchael@gentoo.org> xfishtank-2.1.ebuild:
+  Do not strip binaries during install.
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
